# Algorithms-Performance

./: CMakeLists.txt  README.md  main.cpp
include/: CheckSort.h  DataDistr.h  DataFile.h  DataReader.h  DataWriter.h  RandomData.h  Sort.h  Timer.h
